--- a/public/assignment/client/views/field/field.view.html
+++ b/public/assignment/client/views/field/field.view.html
@@ -1,27 +1,27 @@
-<div class="field" ng-controller="FieldController">
-    <!-- If User exists -->
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <div class="" ng-if="user">
         <div ng-if="selectedForm">
             <h1 class="page-header">Fields: {{selectedForm.title}}</h1>
-
             <ul class="nav nav-tabs">
-                <li id="formsTab"><a href="#/form">Forms</a></li>
-                <li id="fieldsTab" class="active"><a ng-href="#/user/{{user.id}}/form/{{selectedForm.id}}/fields" ng->Fields</a></li>
+                <li role="presentation">
+                    <a href="#/form">
+                        Forms
+                    </a>
+                </li>
+                <li role="presentation" class="active">
+                    <a ng-href="#/user/{{user.id}}/form/{{selectedForm.id}}/fields" ng->
+                        Fields
+                    </a>
+                </li>
             </ul>
-
+            <br/> <br/>
             <div class="tab-content">
                 <div id="forms" class="tab-pane fade in active">
                     <div class="table-responsive">
                         <form>
-
-                            <div ng-if="newField.typ && false" class="form-group col-xs-12" ng-repeat="(key, value) in newField[newField.type]">
-                                <li>{{key}}</li>
-                            </div>
-
                             <div class="form-group col-xs-12" ng-repeat="field in fields">
                                 <div class="col-sm-7">
                                     <label for="{{field.id}}">{{field.label}}</label>
-                                    <!-- <input class="form-control" type="{{field.type}}" id="{{field.id}}"> -->
                                     <div ng-switch on="field.fieldType">
                                         <div class="" ng-switch-when="TEXT" id="{{field.id}}">
                                             <input class="form-control" type="{{field.type}}"  placeholder="{{field.placeholder}}">
@@ -58,22 +58,18 @@
                                 </div>
                                 <div class="col-sm-3 col-sm-push-2">
                                     <a href=""><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                                    <a href="" ng-click="cloneField(field, $index)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+                                    <a href=""><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
                                     <a href="" ng-click="deleteField(field)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
                                     <a href=""><span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span></a>
                                 </div>
                             </div>
-
-                            <!-- Horizontal Divider-->
                             <div class="form-group col-xs-12 line-break">
                                 <hr>
                             </div>
-
-                            <!-- Add New Fields -->
                             <div class="form-group col-xs-12 add-field">
                                 <div class="col-sm-7">
                                     <label for="add-new-field">Add New Field:</label>
-                                    <select data-ng-model="newFieldType" name="select" id="add-new-field">
+                                    <select ng-model="newFieldType" name="select" id="add-new-field">
                                         <option value="">No Fields Selected</option>
                                         <option value="slt">Single Line Text Field</option>
                                         <option value="mltf">Multi Line Text Field</option>
@@ -89,23 +85,21 @@
                                 </div>
                             </div>
                         </form>
-                        <span class="error">{{error}}</span>
                     </div>
                 </div>
             </div>
         </div>
         <div ng-if="!selectedForm">
-            <h1 class="page-header">Fields: No Form Selected</h1>
+            <h1 class="page-header">Fields: Please select a form</h1>
             <ul class="nav nav-tabs">
-                <li id="formsTab"><a href="#/form">Forms</a></li>
-                <li id="fieldsTab" class="active"><a href="#/user">Fields</a></li>
+                <li role="presentation"><a href="#/form">Forms</a></li>
+                <li role="presentation" class="active"><a href="#/user">Fields</a></li>
             </ul>
-            <span class="error">please select a form first to view and edit its fields</span>
         </div>
     </div>
-    <!-- if user doesn't exists -->
     <div ng-if="!user">
-        <h1 class="page-header">Please <a href="#/login">Login</a> to access this page.</h1>
+        <div class="jumbotron">
+            <p>You must <a href="#/login">login</a> to access this page.</p>
+        </div>
     </div>
-
 </div>
