--- a/public/project/client/views/sidebar/sidebar-widgets/sidebar-profile/sidebar-profile.html
+++ b/public/project/client/views/sidebar/sidebar-widgets/sidebar-profile/sidebar-profile.html
@@ -1,6 +1,6 @@
-<div class="text-center">
-	<a ui-sref="profile"><img src="images/flat-avatar.png" class="user-avatar" /></a>
+<div class="text-center" ng-controller="SideBarProfileCtrl">
+	<a ui-sref="profile"><img ng-src="{{image}}" class="user-avatar" /></a>
     <a ui-sref="profile"></a>
-	<div class="text-center avatar-name">Twitter User
+	<div class="text-center avatar-name"> {{username}}
 	</div>
 </div>
